# data_structures_and_algorithms_in_python_example_codes

./: .gitignore  pyproject.toml
chapter_3/: code_3_1.py
