[tool.poetry]
name = "data_structures_and_algorithms_in_python_example_codes"
version = "0.1.0"
description = ""
authors = ["dilless <bohuang1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple"
default = true